# CalcLogic

lab_02/: CMakeLists.txt  main.cpp  Отчет_лабораторная_2.docx
lab_02/include/: Approximation.h  Newton.h  TaskData.h  VectorUtils.h
lab_02/src/: Approximation.cpp  Newton.cpp  TaskData.cpp
